@@ -428,3 +428,4 @@ QPDFFormFieldObjectHelper fallback Tf 0
 QPDFPageObjectHelper non-trivial inheritance 0
 QPDFPageObjectHelper copy shared attribute 0
 qpdf from_nr from repeat_nr 0
+QPDF resolve duplicated page object 0
